themes/webtrees/style.css
/**
 * Style for Standard theme
 *
 * Use this stylesheet to customize the display of your site.
 * To learn more about CSS visit http: //www.w3.org/TR/REC-CSS2/
 *
 * webtrees: Web based Family History software
 * Copyright (C) 2010 webtrees development team.
 *
 * Derived from PhpGedView
 * Copyright (C) 2002 to 2009  PGV Development Team.  All rights reserved.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
 * @package webtrees
 * @subpackage Themes
 * @version $Id$
 */


.something {
	/*empty style to make sure that the BODY style is not ignored */
}

body {
	color: black;
	background-color: white;
	font: 12px tahoma, arial, helvetica, sans-serif;
	margin: 1px;
	padding-left:5px;
}

fieldset {
	margin: 8px 8px 4px 8px;
}

legend {
	font-weight: bold;
}

a {
	color: #555555;
	text-decoration: none;
	font-family: tahoma, arial, helvetica, sans-serif;
}

a:hover	{
	color: red;
	text-decoration: none;
}
:focus {
  -moz-outline-style: none;
}
th {
	font-weight: 100;
}

ul {
	padding-left: 15px;
	padding-right: 15px;
	margin: 8px;
}

img {
	border: none;
}

legend img {
	height: 25px;
	vertical-align: middle;
	width: 25px;
}

img.block, #calendar_img, #biglink img {
	border: none;
	height: 25px;
	vertical-align: middle;
}

.edit_link:after  {
	content: url(images/edit_sm.png);
}

.button {
	width: 60px;
}
.gedcom_table {
	border: 1px solid #81a9cb;
	margin: 0;
	width: 99%;
}

.person_box {
	background-color: #edf7fd;
	border: solid #81a9cb 1px;
}

.person_boxF {
	background-color: #e9daf1;
	border: 1px solid #ff2080;
}

.person_boxNN {
	background-color: white;
	border: dashed #81a9cb 1px;
}

.person_box:target, .news_box:target, #gedcom_stats:target {
	background-color: #ffffcc;
}

.list_table {
	margin-left: auto;
	margin-right: auto;
}

.center {
	text-align: center;
}

table.center {
	margin-left: auto;
	margin-right: auto;
}

.list_label, .list_label_wrap {
	color: #ffffff;
	background-color: #81a9cb;
	font: bold 12px tahoma, arial, helvetica, sans-serif;
	text-align: center;
}

.list_value, .list_value_wrap {
	background-color: #edf7f9;
	color: black;
	border: solid #81a9cb 1px;
	font: 12px tahoma, arial, helvetica, sans-serif;
	vertical-align: top;
}

.list_label, .list_value {
	white-space: nowrap;
}

.list_label_wrap, .list_value_wrap {
	white-space: normal;
}

.list_item {
	font-size: 12px;
}

.facts_table, .facts_table_rtl {
	width: 99%;
}

.facts_label {
	color: #ffffff;
	background-color: #81a9cb;
	font: 12px tahoma, arial, helvetica, sans-serif;
	padding: 4px 4px 4px 4px;
	width: 20%;
	text-align: center;
}

.facts_label02, .facts_label03 {
	color: #ffffff;
	font: 12px tahoma, arial, helvetica, sans-serif;
	padding: 4px 4px 4px 4px;
	text-align: center;
	font-weight: bold;
}

.facts_label02 {
	background-color: #c4c9e6;
}

.facts_label03 {
	background-color: #81a9cb;
}

.facts_value {
	background-color: #edf7fd;
	color: black;
	border: solid #81a9cb 1px;
	font: 12px tahoma, arial, helvetica, sans-serif;
	padding: 4px 4px 4px 4px;
}

.facts_value02 {
	background-color: #edf7fd;
	color: black;
	border: solid #81a9cb 1px;
	font: 12px tahoma, arial, helvetica, sans-serif;
	padding: 5px;
}

.facts_labelred, .facts_labelblue {
	color: #ffffff;
	background-color: #81a9cb;
	font: 12px tahoma, arial, helvetica, sans-serif;
	padding: 4px 4px 4px 4px;
	width: 20%;
	text-align: center;
}

.facts_valuered, .facts_valueblue {
	background-color: #edf7fd;
	color: black;
	font: 12px tahoma, arial, helvetica, sans-serif;
	padding: 4px 4px 4px 4px;
}

.facts_labelred, .facts_valuered {
	border: solid red 2px;
}

.facts_labelblue, .facts_valueblue {
	border: solid blue 2px;
}

.tabs_table {
	width: 99%;
}

.tab_cell_active {
	background-color: white;
	border-left: outset #81a9cb 2px;
	border-top: outset #81a9cb 2px;
	border-right: outset #81a9cb 2px;
	text-align: center;
	font-weight: bold;
	font-size: 10pt;
}

.tab_cell_inactive {
	background-color: #edf7fd;
	border-left: solid #81a9cb 2px;
	border-top: solid #81a9cb 2px;
	border-right: outset #81a9cb 2px;
	text-align: center;
	font-weight: bold;
	font-size: 10pt;
}

.tab_cell_inactive_empty {
	background-color: #c6d0da;
	border-left: solid #81a9cb 2px;
	border-top: solid #81a9cb 2px;
	border-right: outset #81a9cb 2px;
	text-align: center;
	font-weight: bold;
	font-size: 10pt;
}

.tab_cell_inactive_empty a {
	color: #999999;
}

.tab_active_bottom {
	border-top: none;
	border-bottom: none;
	border-left: none;
	border-right: none;
	height: 5px;
}

.tab_inactive_bottom {
	border-left: none;
	border-right: none;
	border-top: outset #81a9cb 2px;
	height: 5px;
}

.tab_inactive_bottom_right {
	border-left: none;
	border-right: none;
	border-top: outset #81a9cb 2px;
	width: 33%;
	height: 5px;
}

.name1 {
	color: #333333;
	font: bold 10px tahoma, arial, helvetica, sans-serif;
}

a:hover .name1 {
	color: red;
	font: bold 10px tahoma, arial, helvetica, sans-serif;
}

a:hover .name2 {
	color: red;
	font: bold 12px tahoma, arial, helvetica, sans-serif;
}

a:hover .nameZoom {
	color: red;
	font: bold 14px tahoma, arial, helvetica, sans-serif;
}

.details1 {
	font: normal 10px tahoma, arial, helvetica, sans-serif;
}

.name2 {
	color: #333;
	font: bold 12px tahoma, arial, helvetica, sans-serif;
}

.details2 {
	font: normal 12px tahoma, arial, helvetica, sans-serif;
}
/* ... */

